Some audible UI changes.

--- a/audible/audible/Base.lproj/LaunchScreen.storyboard
+++ b/audible/audible/Base.lproj/LaunchScreen.storyboard
@@ -1,11 +1,11 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1611" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13174"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -28,10 +28,18 @@
                                     <constraint firstAttribute="height" constant="240" id="IaO-2r-o4B"/>
                                 </constraints>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qm3-CH-X3r">
+                                <rect key="frame" x="166" y="138" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="i3n-vb-Icy" firstAttribute="top" secondItem="Qm3-CH-X3r" secondAttribute="bottom" constant="54" id="Rkp-mo-IAx"/>
                             <constraint firstItem="i3n-vb-Icy" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="S72-n4-q7M"/>
+                            <constraint firstItem="Qm3-CH-X3r" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="Ycx-hm-FDA"/>
                             <constraint firstItem="i3n-vb-Icy" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="tSm-Pb-MU3"/>
                         </constraints>
                     </view>
